[profile.release]
opt-level = 3
debug = true
panic = "abort"
lto = "thin"

[profile.release.package."*"]
opt-level = 3
debug = true

[profile.dev]
debug = true
panic = "abort"

[workspace]
resolver = "2"
members = [
    "cli",
    "library",
    "pico",
    "web",
]

# stdweb is broken with latest wasm-bindgen, patch it to fix
[patch.crates-io]
stdweb = { git = 'https://github.com/bobbobbio/stdweb.git' }
