[profile.release]
opt-level = 3
debug = true
panic = "abort"
lto = "thin"

[profile.release.package."*"]
opt-level = 3
debug = true

[profile.dev]
debug = true
panic = "abort"

[workspace]
resolver = "2"
members = [
    "cli",
    "library",
    "pico",
    "web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Remi Bernotavicius <remi@.abort.cc>"]
repository = "https://github.com/bobbobbio/come_boy"
homepage = "https://github.com/bobbobbio/come_boy"
