[package]
name = "come_boy_cli"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@.abort.cc>"]
edition = "2018"
repository = "https://github.com/bobbobbio/come_boy"
homepage = "https://github.com/bobbobbio/come_boy"

[features]
default = ["speedy2d-renderer", "sound"]
speedy2d-renderer = ["come_boy/speedy2d-renderer"]
sdl2-renderer = ["come_boy/sdl2-renderer"]
sound = ["come_boy/sound"]

[dependencies]
clap = "*"
come_boy = { version = "*", path = "../library" }
ctrlc = "*"
log = "*"
simple_logger = "*"
structopt = "*"

