[package]
name = "come_boy_cli"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@.abort.cc>"]
edition = "2021"
repository = "https://github.com/bobbobbio/come_boy"
homepage = "https://github.com/bobbobbio/come_boy"

[features]
default = ["eframe-renderer", "sound"]
speedy2d-renderer = ["come_boy/speedy2d-renderer"]
sdl2-renderer = ["come_boy/sdl2-renderer"]
eframe-renderer = ["eframe", "egui", "egui_glow"]
sound = ["come_boy/sound"]

[dependencies]
clap = { version = "4", features = ["derive"] }
come_boy = { version = "*", path = "../library" }
ctrlc = "*"
eframe = { version = "*", optional = true }
egui = { version = "*", optional = true }
egui_glow = { version = "*", optional = true }
log = "*"
simple_logger = "*"
