[package]
name = "come_boy_cli"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[features]
default = ["eframe-renderer", "sound"]
speedy2d-renderer = ["come_boy/speedy2d-renderer"]
sdl2-renderer = ["come_boy/sdl2-renderer"]
eframe-renderer = ["eframe", "egui", "egui_glow"]
sound = ["come_boy/sound"]

[dependencies]
clap = { version = "4", features = ["derive"] }
come_boy = { version = "*", path = "../library" }
ctrlc = "3.4"
eframe = { version = "0.22.0", optional = true }
egui = { version = "0.22.0", optional = true }
egui_glow = { version = "0.22.0", optional = true }
log = "0.4.25"
simple_logger = "5"
