[package]
name = "come_boy_pico"
version = "0.1.0"
build = "build.rs"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[features]
default = ["std"]
std = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
come_boy = {default_features = false, features = [], path = "../library", version = "*"}
enum-iterator = "0.8.1"

[build-dependencies]
bindgen = "*"
