[package]
name = "come_boy_pico"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[features]
default = ["std"]
std = []
aggressive-inline = ["come_boy/aggressive-inline"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
come_boy = {default-features = false, path = "../library", version = "*"}
enum-iterator = "0.8.1"
rpi-pico-sdk-sys = "0.0.2"

[build-dependencies]
bindgen = "0.65.1"

[lints.clippy]
precedence = "allow"
