[package]
name = "come_boy_web"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
aggressive-inline = ["come_boy/aggressive-inline"]

[dependencies]
eframe = "*"
egui = "*"
egui_glow = "*"
base64 = "*"
console_error_panic_hook = "*"
glow = "^0.11"
js-sys = "*"
log = "*"
rfd = "*"
wasm-bindgen = "*"
wasm-logger = "*"
wasm-bindgen-futures = "*"

[dependencies.come_boy]
default-features = false
features = ["std", "game-pad", "egui-renderer", "ui"]
path = "../library"
version = "*"

[dependencies.web-sys]
version = "*"
features = [
  "Blob",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlCanvasElement",
  "HtmlHeadElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Performance",
  "Storage",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
]
