[package]
name = "come_boy_web"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
aggressive-inline = ["come_boy/aggressive-inline"]

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
egui_glow = "0.22.0"
base64 = "0.22.0"
console_error_panic_hook = "0.1.7"
glow = "^0.11"
js-sys = "0.3.77"
log = "0.4.25"
rfd = "0.15.2"
wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.50"

[dependencies.come_boy]
default-features = false
features = ["std", "game-pad", "egui-renderer", "ui"]
path = "../library"
version = "*"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Blob",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlCanvasElement",
  "HtmlHeadElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Performance",
  "Storage",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
]
