[package]
name = "come_boy_web"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lib]
crate-type = ["cdylib"]

[features]
aggressive-inline = ["come_boy/aggressive-inline"]

[dependencies]
eframe = { version = "0.34.1", default-features = false, features = ["glow"] }
egui = "0.34.1"
egui_glow = "0.34.1"
base64 = "0.22.0"
console_error_panic_hook = "0.1.7"
glow = "0.17"
js-sys = "0.3.77"
log = "0.4.25"
rfd = "0.15.2"
wasm-bindgen = "0.2.100"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.50"

[dependencies.come_boy]
default-features = false
features = ["std", "game-pad", "egui-renderer", "ui", "sound", "web-sound"]
path = "../library"
version = "*"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "Blob",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
  "HtmlCanvasElement",
  "HtmlHeadElement",
  "HtmlInputElement",
  "KeyboardEvent",
  "Performance",
  "Storage",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",
]
